# pds

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.multi  docker-compose.yml  docker-entrypoint.sh
admin-ui/: README.md  package.json  pnpm-lock.yaml  svelte.config.js
admin-ui/src/: app.html
admin-ui/src/lib/: api.ts  auth.svelte.ts
admin-ui/src/routes/: +layout.svelte  +page.svelte
admin-ui/src/routes/accounts/: +page.svelte
admin-ui/src/routes/dashboard/: +page.svelte
admin-ui/src/routes/invites/: +page.svelte
admin-ui/src/routes/settings/: +page.svelte
config/: docker-multi.toml  docker.toml  multi.toml  production.toml  single.toml
crates/dallaspds-blob-fs/: Cargo.toml
crates/dallaspds-blob-fs/src/: lib.rs
crates/dallaspds-blob-fs/tests/: blob_store.rs
crates/dallaspds-blob-s3/: Cargo.toml
crates/dallaspds-blob-s3/src/: lib.rs
crates/dallaspds-core/: Cargo.toml
crates/dallaspds-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/dallaspds-core/src/traits/: account_store.rs  blob_store.rs  event_store.rs  mod.rs  repo_store.rs
crates/dallaspds-crypto/: Cargo.toml
crates/dallaspds-crypto/src/: did.rs  jwt.rs  lib.rs  password.rs  signing.rs  tid.rs
crates/dallaspds-identity/: Cargo.toml
crates/dallaspds-identity/src/: lib.rs
crates/dallaspds-multi/: Cargo.toml
crates/dallaspds-multi/src/: main.rs
crates/dallaspds-repo/: Cargo.toml
crates/dallaspds-repo/src/: blockstore_adapter.rs  car.rs  lib.rs  operations.rs
crates/dallaspds-server/: Cargo.toml
crates/dallaspds-server/src/: admin_ui.rs  auth.rs  email.rs  error.rs  lib.rs  state.rs
crates/dallaspds-server/src/firehose/: emit.rs  events.rs  mod.rs  relay.rs  sequencer.rs  stream.rs  wire.rs
crates/dallaspds-server/src/proxy/: mod.rs  pipethrough.rs  read_after_write.rs  service_auth.rs
crates/dallaspds-server/src/routes/: admin.rs  health.rs  identity.rs  mod.rs  oauth.rs  repo.rs  server.rs  sync.rs  well_known.rs
crates/dallaspds-server/tests/: admin_endpoints.rs  auth.rs  firehose.rs  health.rs  identity_endpoints.rs  repo_endpoints.rs  server_endpoints.rs  sync_endpoints.rs
crates/dallaspds-single/: Cargo.toml
crates/dallaspds-single/src/: main.rs
crates/dallaspds-storage-postgres/: Cargo.toml
crates/dallaspds-storage-postgres/migrations/: 20250101000000_init.sql
crates/dallaspds-storage-postgres/src/: account.rs  event.rs  lib.rs  repo.rs
crates/dallaspds-storage-sqlite/: Cargo.toml
crates/dallaspds-storage-sqlite/migrations/: 20250101000000_init.sql
crates/dallaspds-storage-sqlite/src/: account.rs  event.rs  lib.rs  repo.rs
crates/dallaspds-storage-sqlite/tests/: account_store.rs  event_store.rs  repo_store.rs
crates/dallaspds-test-utils/: Cargo.toml
crates/dallaspds-test-utils/src/: assertions.rs  lib.rs  server.rs  stores.rs
