[package]
name = "dallaspds-blob-fs"
version.workspace = true
edition.workspace = true

[dependencies]
dallaspds-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
