[package]
name = "dallaspds-storage-postgres"
version.workspace = true
edition.workspace = true

[dependencies]
dallaspds-core = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
async-trait = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
